<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
	
	<string name="song_singular">Song</string>
	<string name="songs_plural">Songs</string>
	<string name="all_songs">All Songs</string>
	<string name="dialog_title_song_options">Song Options</string>
	
	<string name="genres_plural">Genres</string>
	<string name="genre_singular">Genre</string>
	
	<string name="playlists_plural">Playlists</string>
	<string name="playlists_options">Playlist Options</string>
	<string name="playlist_new">Create New Playlist</string>
	<string name="playlist_rename">Rename Playlist</string>
	<string name="playlist_delete">Delete Playlist?</string>
	<string name="playlist_editing">Editing</string>
	<string name="playlist_name_starred">Starred</string>
	
	<string name="playlist_created">Created playlist</string>
	<string name="playlist_cant_name_starred">Playlist can\'t be named Starred</string>
	<string name="playlist_did_star">Starred song.</string>
	<string name="playlist_add">Add to Playlist</string>
	<string name="playlist_removed">Removed song from playlist.</string>
	<string name="playlist_added">Added song to playlist.</string>
	<string name="playlist_cant_play_when_editing">Press Done to finish editing</string>
	<string name="playlist_added_song_to_new">Added song to new playlist</string>
	<string name="playlist_delete_confirm">Are you sure you want to delete this playlist?</string>
	<string name="playlist_enter_name">Please enter a playlist name.</string>
	
	<string name="settings">Settings</string>
	
	<string name="discover">Discover</string>
	
	<string name="albums_plural">Albums</string>
	<string name="album_singular">Album</string>
	
	<string name="search">Search</string>
	<string name="clear_search_history">Clear Search History</string>
	<string name="search_hint">Search for Music</string>
	<string name="see_all">See All</string>
	
	<string name="activity_title_now_playing">Now Playing</string>
	<string name="activity_title_settings">PlayTunes Settings</string>
	
	<string name="cancel">Cancel</string>
	<string name="update">Update</string>
	
	<string name="shuffle_on">Shuffle on</string>
	<string name="shuffle_off">Shuffle off</string>
	
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="artist_all_songs">All Songs</string>
    <string name="artist_singles">Singles</string>
    <string name="artists_plural">Artists</string>
    <string name="artist_singular">Artist</string>
    <string name="artist_unknown">Unknown Artist</string>
    
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    
    <string name="send_feedback">Send Feedback</string>
    <string name="send">Send</string>
    <string name="feedback_form_hint">Tell us how we can improve PlayTunes</string>
    <string name="feedback_thanks">Thank you for your input!</string>
    
    <string name="support_plus_one">Support us with a +1</string>
    <string name="support_rate">Support us by rating</string>
    <string name="rate_beg">Please rate us in Google Play</string>
    <string name="rate_app">Rate PlayTunes</string>
    <string name="no_thanks">No Thanks</string>
    
    <string name="update_app">Update App</string>
    <string name="version_outdated">This version of PlayTunes is out of date. Go to the Google Play Store to update.</string>
    
    <string name="playlist_name">Playlist Name</string>
    
    <string name="back_warning">Press again to exit</string>
    
    <string name="scan_for_new_media">Scan device for new music files</string>
  
    
</resources>
