<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:minWidth="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">
    
	    <TextView android:id="@+id/DialogHeaderTitle"
	        
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/touch_target_minimum"
	        android:textColor="@color/textColorPrimaryDark"
	        android:textSize="@dimen/text_xlarge"
	        android:gravity="center"
	        android:text="@string/playlists_options"
	        android:background="@color/primaryAccentColor"
	        
		/>

	<Button
	    android:id="@+id/PlaylistOptionsRename"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/list_item_height"
	    android:background="@drawable/list_item_background"
	    android:gravity="left|center_vertical"
	    android:paddingLeft="@dimen/list_item_horizontal_spacing"
	    android:text="@string/rename"
	    android:textColor="@color/textColorPrimary"
	    android:textSize="@dimen/text_large"
	    android:textAllCaps="false"
	    />
	
   	<View
   	    android:layout_width="match_parent"
   	    android:layout_height="1px"
   	    android:background="@color/list_divider_color"
   	    />
	
	<Button
	    android:id="@+id/PlaylistOptionsDelete"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/list_item_height"
	    android:background="@drawable/list_item_background"
	    android:gravity="left|center_vertical"
	    android:paddingLeft="@dimen/list_item_horizontal_spacing"
	    android:text="@string/delete"
	    android:textColor="@color/textColorPrimary"
	    android:textSize="@dimen/text_large"
	    android:textAllCaps="false"/>
	
	<Button
    android:id="@+id/ButtonCancel"
    android:layout_width="match_parent"
    android:layout_height="@dimen/touch_target_minimum"
    android:text="@string/cancel"
    android:textSize="@dimen/text_medium"
    android:background="@drawable/list_button_background"
    
    />
    
</LinearLayout>

