<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:minWidth="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">
    
	    <TextView android:id="@+id/DialogHeaderTitle"
	        
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/touch_target_minimum"
	        android:textColor="@color/textColorPrimaryDark"
	        android:textSize="@dimen/text_xlarge"
	        android:gravity="center"
	        android:text="@string/playlist_rename"
			android:background="@color/primaryAccentColor"
		/>
	
    <EditText android:id="@+id/NewPlaylistName"
        style="@style/AccentedField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="top|left"
        android:hint="@string/playlist_name"
        android:layout_margin="16dp" />
    
        <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_minimum"
        android:background="@color/list_item_pressed">
        
		<Button android:id="@+id/DialogRenameCancel"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:textSize="@dimen/text_large"
			android:textColor="@color/textColorPrimary"
			android:text="@string/cancel"
			android:background="@drawable/button_background_light"
		/>
		
		<View
        	android:layout_width="1dp"
        	android:layout_height="match_parent"
        	android:background="@drawable/list_divider"
        />
		
		<Button android:id="@+id/DialogRenameConfirm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:textSize="@dimen/text_large"
			android:textColor="@color/textColorPrimary"
			android:text="@string/rename"
			android:background="@drawable/button_background_light"
		/>
        
    </LinearLayout>
    
</LinearLayout>
