<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:minWidth="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">
    
    <LinearLayout android:id="@+id/DialogHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_minimum"
        android:orientation="horizontal"
        android:background="@color/primaryAccentColor">
        
		<ImageButton android:id="@+id/DialogCloseButton"
	        
	        android:layout_width="@dimen/touch_target_minimum"
	        android:layout_height="@dimen/touch_target_minimum"
	        android:src="@drawable/ic_action_cancel"
	        android:background="@drawable/button_background_dark"
			
		/>
        
	    <TextView android:id="@+id/DialogHeaderTitle"
	        
	        android:layout_width="0dp"
	        android:layout_height="@dimen/touch_target_minimum"
	        android:layout_weight="1"
	        android:textColor="@color/textColorPrimaryDark"
	        android:textSize="@dimen/text_xlarge"
	        android:gravity="center"
	        android:text="@string/playlist_new"
		/>
	    
		<ImageButton android:id="@+id/DialogConfirmButton"
	        
	        android:layout_width="@dimen/touch_target_minimum"
	        android:layout_height="@dimen/touch_target_minimum"
	        android:src="@drawable/ic_action_tick"
	        android:background="@drawable/button_background_dark"
			
		/>
        
    </LinearLayout>
	
    <EditText android:id="@+id/NewPlaylistName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="top|left"
        android:hint="@string/playlist_name"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_minimum"
        android:background="@color/list_item_pressed">
        
		<Button android:id="@+id/DialogCancel"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:textSize="@dimen/text_large"
			android:textColor="@color/textColorPrimary"
			android:text="@string/cancel"
			android:background="@drawable/button_background_light"
		/>
		
		<View
        	android:layout_width="1dp"
        	android:layout_height="match_parent"
        	android:background="@drawable/list_divider"
        />
		
		<Button android:id="@+id/DialogConfirm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:textSize="@dimen/text_large"
			android:textColor="@color/textColorPrimary"
			android:text="@string/ok"
			android:background="@drawable/button_background_light"
		/>
        
    </LinearLayout>
</LinearLayout>
